internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Player_Player_HeldItems_Result;
typedef struct {
    double v0;
    bool v1;
} Player_Player_Hurt_Result;
double Player_Player_FallDistance(uint64_t self);
double Player_Player_FinalDamageFrom(uint64_t self, double p1, uint64_t p2);
void Player_Player_FinishBreaking(uint64_t self);
bool Player_Player_FireProof(uint64_t self);
double Player_Player_FlightSpeed(uint64_t self);
bool Player_Player_Flying(uint64_t self);
int Player_Player_Food(uint64_t self);
uint64_t Player_Player_GameMode(uint64_t self);
bool Player_Player_Gliding(uint64_t self);
uint64_t Player_Player_H(uint64_t self);
void Player_Player_Handle(uint64_t self, uint64_t p1);
uint64_t Player_Player_Handler(uint64_t self);
bool Player_Player_HasCooldown(uint64_t self, uint64_t p1);
void Player_Player_Heal(uint64_t self, double p1, uint64_t p2);
double Player_Player_Health(uint64_t self);
Player_Player_HeldItems_Result Player_Player_HeldItems(uint64_t self);
void Player_Player_HideCoordinates(uint64_t self);
void Player_Player_HideEntity(uint64_t self, uint64_t p1);
void Player_Player_HideHudElement(uint64_t self, uint64_t p1);
bool Player_Player_HudElementHidden(uint64_t self, uint64_t p1);
Player_Player_Hurt_Result Player_Player_Hurt(uint64_t self, double p1, uint64_t p2);
bool Player_Player_Immobile(uint64_t self);
uint64_t Player_Player_Inventory(uint64_t self);
bool Player_Player_Invisible(uint64_t self);
void Player_Player_Jump(uint64_t self);
void Player_Player_KnockBack(uint64_t self, uint64_t p1, double p2, double p3);
int64_t Player_Player_Latency(uint64_t self);
uint64_t Player_Player_Locale(uint64_t self);
int64_t Player_Player_MaxAirSupply(uint64_t self);
double Player_Player_MaxHealth(uint64_t self);
void Player_Player_Message(uint64_t self, uint64_t p1);
void Player_Player_Messagef(uint64_t self, char* p1, uint64_t p2);
void Player_Player_Messaget(uint64_t self, uint64_t p1, uint64_t p2);
void Player_Player_Move(uint64_t self, uint64_t p1, double p2, double p3);
void Player_Player_MoveItemsToInventory(uint64_t self);
char* Player_Player_Name(uint64_t self);
char* Player_Player_NameTag(uint64_t self);
int64_t Player_Player_OnFireDuration(uint64_t self);
bool Player_Player_OnGround(uint64_t self);
void Player_Player_OpenBlockContainer(uint64_t self, uint64_t p1, uint64_t p2);
void Player_Player_OpenSign(uint64_t self, uint64_t p1, bool p2);
void Player_Player_PickBlock(uint64_t self, uint64_t p1);
void Player_Player_PlaceBlock(uint64_t self, uint64_t p1, uint64_t p2, uint64_t p3);
void Player_Player_PlaySound(uint64_t self, uint64_t p1);
GoArray Player_Player_Position(uint64_t self);
void Player_Player_PunchAir(uint64_t self);
void Player_Player_ReleaseItem(uint64_t self);
void Player_Player_RemoveAllDebugShapes(uint64_t self);
void Player_Player_RemoveBossBar(uint64_t self);
void Player_Player_RemoveDebugShape(uint64_t self, uint64_t p1);
void Player_Player_RemoveEffect(uint64_t self, uint64_t p1);
void Player_Player_RemoveExperience(uint64_t self, int p1);
void Player_Player_RemoveScoreboard(uint64_t self);
void Player_Player_ResetEnchantmentSeed(uint64_t self);
void Player_Player_ResetFallDistance(uint64_t self);
uint64_t Player_Player_Respawn(uint64_t self);
GoArray Player_Player_Rotation(uint64_t self);
void Player_Player_Saturate(uint64_t self, int p1, double p2);
double Player_Player_Scale(uint64_t self);
char* Player_Player_ScoreTag(uint64_t self);
char* Player_Player_SelfSignedID(uint64_t self);
void Player_Player_SendBossBar(uint64_t self, uint64_t p1);
void Player_Player_SendCommandOutput(uint64_t self, uint64_t p1);
void Player_Player_SendDialogue(uint64_t self, uint64_t p1, uint64_t p2);
void Player_Player_SendForm(uint64_t self, uint64_t p1);
void Player_Player_SendJukeboxPopup(uint64_t self, uint64_t p1);
void Player_Player_SendPopup(uint64_t self, uint64_t p1);
void Player_Player_SendScoreboard(uint64_t self, uint64_t p1);
void Player_Player_SendSleepingIndicator(uint64_t self, int p1, int p2);
void Player_Player_SendTip(uint64_t self, uint64_t p1);
void Player_Player_SendTitle(uint64_t self, uint64_t p1);
void Player_Player_SendToast(uint64_t self, char* p1, char* p2);
void Player_Player_SetAbsorption(uint64_t self, double p1);
void Player_Player_SetAirSupply(uint64_t self, int64_t p1);
void Player_Player_SetCooldown(uint64_t self, uint64_t p1, int64_t p2);
void Player_Player_SetExperienceLevel(uint64_t self, int p1);
void Player_Player_SetExperienceProgress(uint64_t self, double p1);