internal/generator/output/interop_bindings.g.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_FallDistance(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_FinalDamageFrom(ulong self, double p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_FinishBreaking(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_FireProof(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_FlightSpeed(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Flying(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Player_Player_Food(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_GameMode(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Gliding(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_H(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Handle(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Handler(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_HasCooldown(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Heal(ulong self, double p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_Health(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Player_Player_HeldItems_Result Player_Player_HeldItems(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_HideCoordinates(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_HideEntity(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_HideHudElement(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_HudElementHidden(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Player_Player_Hurt_Result Player_Player_Hurt(ulong self, double p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Immobile(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Inventory(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Invisible(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Jump(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_KnockBack(ulong self, ulong p1, double p2, double p3);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long Player_Player_Latency(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Locale(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long Player_Player_MaxAirSupply(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_MaxHealth(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Message(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Messagef(ulong self, IntPtr p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Messaget(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Move(ulong self, ulong p1, double p2, double p3);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_MoveItemsToInventory(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Player_Player_Name(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Player_Player_NameTag(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long Player_Player_OnFireDuration(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_OnGround(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_OpenBlockContainer(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_OpenSign(ulong self, ulong p1, byte p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_PickBlock(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_PlaceBlock(ulong self, ulong p1, ulong p2, ulong p3);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_PlaySound(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Player_Player_Position(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_PunchAir(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ReleaseItem(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_RemoveAllDebugShapes(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_RemoveBossBar(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_RemoveDebugShape(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_RemoveEffect(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_RemoveExperience(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_RemoveScoreboard(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ResetEnchantmentSeed(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ResetFallDistance(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Respawn(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Player_Player_Rotation(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Saturate(ulong self, int p1, double p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_Scale(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Player_Player_ScoreTag(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Player_Player_SelfSignedID(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendBossBar(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendCommandOutput(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendDialogue(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendForm(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendJukeboxPopup(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendPopup(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendScoreboard(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendSleepingIndicator(ulong self, int p1, int p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendTip(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendTitle(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SendToast(ulong self, IntPtr p1, IntPtr p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetAbsorption(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetAirSupply(ulong self, long p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetCooldown(ulong self, ulong p1, long p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetExperienceLevel(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetExperienceProgress(ulong self, double p1);
